@@ -148,18 +148,27 @@
       (when menu
         (let ((action nil)
               (old-info-keys (copy-hash-table *info-keys*)))
-          (labels ((populate-menu ()
+          (labels ((menu-entry (item value)
+                     (list (list (format nil "~A" (menu-item-key item)) *menu-color-menu-key*)
+                           (list (format nil ": < ~A >" (menu-doc value)) *menu-color-submenu*)
+                           (list (format nil " ~A" (find-associated-key-bindings
+                                                    (create-symbol 'open- (menu-name value))))
+                                 *menu-key-bound-color*)))
+                   (menu-comment (item)
+                     (list (list (format nil "~A" (menu-item-value item)) *menu-color-comment*)))
+                   (menu-line (item value)
+                     (list (list (format nil "~A" (menu-item-key item)) *menu-color-key*)
+                           (format nil ": ~A" (documentation value 'function))
+                           (list (format nil " ~A" (find-associated-key-bindings value))
+                                 *menu-key-bound-color*)))
+                   (populate-menu ()
                      (let ((info-list nil))
                        (dolist (item (menu-item menu))
                          (let ((value (menu-item-value item)))
                            (push (typecase value
-                                   (menu (list (list (format nil "~A" (menu-item-key item)) *menu-color-menu-key*)
-                                               (list (format nil ": < ~A >" (menu-doc value)) *menu-color-submenu*)))
-                                   (string (list (list (format nil "~A" (menu-item-value item)) *menu-color-comment*)))
-                                   (t (list (list (format nil "~A" (menu-item-key item)) *menu-color-key*)
-                                            (format nil ": ~A" (documentation value 'function))
-                                            (list (format nil " ~A" (find-associated-key-bindings value))
-                                                  *menu-key-bound-color*))))
+                                   (menu (menu-entry item value))
+                                   (string (menu-comment item))
+                                   (t (menu-line item value)))
                                  info-list)
                            (when (menu-item-key item)
                              (define-info-key-fun (list (menu-item-key item))
